--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,136 +1,136 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--  CSS -->
-    <link rel="stylesheet" href="../static/css/headerstyle.css" />
-    <link rel="stylesheet" href="../static/css/bodystyle.css" />
-    <link rel="stylesheet" href="../static/css/navbarstyle.css" />
-    <link rel="stylesheet" href="../static/css/generalstyle.css" />
-    <link rel="stylesheet" href="../static/css/footerstyle.css" />
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- Scripts-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!--  CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/headerstyle.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bodystyle.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/navbarstyle.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/generalstyle.css') }}"  />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/footerstyle.css') }}" />
+  {% block styles %}{% endblock %}
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!-- Scripts-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Title -->
+  <title> Teporingo - {% block title %}{% endblock %}</title>
+  <!-- Icon -->
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/Icon_Bunny_Moon.png') }}" />
+  </meta>
+</head>
+
+<body  {% block body_attributes %}{% endblock %}>
+
+  <div id="Header">
     <!-- Title -->
-    <title> Teporingo - {% block title %}{% endblock %}</title>
-    <!-- Icon -->
-    <link rel="icon" type="image/png" href="../static/img/Icon_Bunny_Moon.png" />
-    </meta>
-  </head>
-
-  <body>
-
-    <div id="Header">
-      <!-- Title -->
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-6 text-center">
-            <h1 class="Title">TEPORINGO</h1>
-          </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <h1 class="Title">TEPORINGO</h1>
         </div>
       </div>
-      <!-- HeadImage -->
-      <div id="header" class="home-page">
-        <div class="head-wrapper"><img class="head" src="../static/img/header-mountain-bunny.svg" /></div>
-      </div>
     </div>
+    <!-- HeadImage -->
+    <div id="header" class="home-page">
+      <div class="head-wrapper"><img class="head" src="{{ url_for('static', filename='img/header-mountain-bunny.svg') }}" /></div>
+    </div>
+  </div>
 
-    <!-- Navbar -->
-    <nav id="navbar-container" class="navbar navbar-expand-lg bg-dark">
-      <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Teporingo</a> -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../templates/AboutUs.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" title="Available Soon">Shelters</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                About them
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../templates/AboutThem.html">Menu</a></li>
+  <!-- Navbar -->
+  <nav id="navbar-container" class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <!-- <a class="navbar-brand" href="#">Teporingo</a> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('AboutUs') }}">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" title="Available Soon">Shelters</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              About them
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{{ url_for('AboutThem') }}">Menu</a></li>
+              <hr class="dropdown-divider">
+              <hr class="dropdown-divider">
+              <li><a class="dropdown-item" href="#">Food & Nutrition</a></li>
+              <li><a class="dropdown-item" href="#">Health & Care</a></li>
+              <li>
                 <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Breeds</a></li>
+              <li>
                 <hr class="dropdown-divider">
-                <li><a class="dropdown-item" href="#">Food & Nutrition</a></li>
-                <li><a class="dropdown-item" href="#">Health & Care</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Breeds</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Items & Toys</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../templates/Organizations.html">Orgs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../templates/DailyBunnyQuote.html">Daily Bunny</a>
-            </li>
+              </li>
+              <li><a class="dropdown-item" href="#">Items & Toys</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('Organizations') }}">Orgs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('DailyBunnyQuote') }}">Daily Bunny</a>
+          </li>
 
-            <!--             <ul>
+          <!--             <ul>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
             </ul> -->
-          </ul>
-        </div>
-      </div>
-    </nav>
-    </ul>
-    </div>
-    </div>
-    </nav>
-
-    {% block main %}{% endblock %}
-  </body>
-
-  <!-- Footer -->
-  <footer class="bg-dark">
-    <div id="footer-container" class="container">
-      <div id="row-container" class="row">
-        <div class="col-md-4 text-center">
-          <img src="../static/img/Icon_Bunny_MoonA.png" alt="Footer Image" id="imgFooter">
-        </div>
-        <div class="col-md-4 text-center">
-          <h2 id="Footer">Teporingo</h2>
-        </div>
-        <div class="col-md-4 text-center">
-          <!-- Social Media Icons/Links Here -->
-          <a class="social_media" href="https://www.linkedin.com/in/raul-chimal-hernandez-a48747219/"
-            target="_blank"><img src="../static/img/linkedinicon.png" alt="Linkedin"></a>
-          <a class="social_media" href="https://www.instagram.com/raul_the11/" target="_blank"><img
-              src="../static/img/instagramicon.png" alt="Instagram"></a>
-          <a class="social_media" href="https://linktr.ee/raulchimalhernandez" target="_blank"><img
-              src="../static/img/linktreeicon.png" alt="LinkTree"></a>
-          <a class="social_media"
-            href="https://open.spotify.com/user/12168861293?si=1091178b6c3b4565&nd=1&dlsi=f3d7694af8ca4c6a"
-            target="_blank"><img src="../static/img/spotifyicon.png" alt="Spotify"></a>
-          <!-- Add more social media icons/links as needed -->
-        </div>
+        </ul>
       </div>
     </div>
-    <h2 id="Author"><a href="https://github.com/Raul-Ch" target="_blank">https://github.com/Raul-Ch</a></h2>
-  </footer>
+  </nav>
+  </ul>
+  </div>
+  </div>
+  </nav>
+
+  {% block content %}{% endblock %}
+</body>
+
+<!-- Footer -->
+<footer class="bg-dark">
+  <div id="footer-container" class="container">
+    <div id="row-container" class="row">
+      <div class="col-md-4 text-center">
+        <img src="{{ url_for('static', filename='img/Icon_Bunny_MoonA.png') }}" alt="Footer Image" id="imgFooter">
+      </div>
+      <div class="col-md-4 text-center">
+        <h2 id="Footer">Teporingo</h2>
+      </div>
+      <div class="col-md-4 text-center">
+        <!-- Social Media Icons/Links Here -->
+        <a class="social_media" href="https://www.linkedin.com/in/raul-chimal-hernandez-a48747219/" target="_blank"><img
+            src="../static/img/linkedinicon.png" alt="Linkedin"></a>
+        <a class="social_media" href="https://www.instagram.com/raul_the11/" target="_blank"><img
+            src="../static/img/instagramicon.png" alt="Instagram"></a>
+        <a class="social_media" href="https://linktr.ee/raulchimalhernandez" target="_blank"><img
+            src="../static/img/linktreeicon.png" alt="LinkTree"></a>
+        <a class="social_media"
+          href="https://open.spotify.com/user/12168861293?si=1091178b6c3b4565&nd=1&dlsi=f3d7694af8ca4c6a"
+          target="_blank"><img src="../static/img/spotifyicon.png" alt="Spotify"></a>
+        <!-- Add more social media icons/links as needed -->
+      </div>
+    </div>
+  </div>
+  <h2 id="Author"><a href="https://github.com/Raul-Ch" target="_blank">https://github.com/Raul-Ch</a></h2>
+</footer>
 
 </html>
