Ai Images integration

--- a/static/css/generalstyle.css
+++ b/static/css/generalstyle.css
@@ -10,8 +10,9 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  background-color: #915f50 !important;
+  background: linear-gradient(to bottom, #915f50,  #ffffff)
+  /* min-height: 100vh; */
+   /*  background-color: #915f50 !important; */
   /* background-color: #883e3e; /* Use !important to ensure this rule takes precedence ALTERNATIVE*/
 }
 
@@ -26,4 +27,5 @@ body {
 
 html {
   overflow-y: scroll;
+  
 }
