--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" id="video">
     <div><img id="MayanTeporingo" clas="img-fluid" src="{{ url_for('static', filename='img/MayanTeporingo.svg') }}" /></div>
+    <div><img id="VideoBunnyMoon" src="" /></div>
   </div>
 {% endblock %}
