--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home
+Home
 {% endblock %}
 
 {% block styles %}
@@ -9,8 +9,23 @@
 {% endblock %}
 
 {% block content %}
+<br>
 <div class="container" id="video">
-    <div><img id="MayanTeporingo" clas="img-fluid" src="{{ url_for('static', filename='img/MayanTeporingo.svg') }}" /></div>
-    <div><img id="VideoBunnyMoon" src="" /></div>
-  </div>
+    <div class="row">
+
+        <img id="MayanTeporingo" class="img-fluid" src="{{ url_for('static', filename='img/MayanTeporingo.png') }}" />
+
+        <div class="video-wrapper">
+            <iframe id="MoonBunny" src="https://www.youtube-nocookie.com/embed/hM1XKh05KkU?si=jyXhbh4P-JgRx9yZ"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+    </div>
+</div>
+<div class="container">
+
+</div>
+<br><br>
 {% endblock %}
