--- a/static/css/generalstyle.css
+++ b/static/css/generalstyle.css
@@ -11,16 +11,9 @@ body {
   display: flex;
   flex-direction: column;
   background: linear-gradient(to bottom, #915f50,  #ffffff);
-   /*  background-color: #915f50 !important; */
+  min-height: 100vh;
+  /*  background-color: #915f50 !important; */
   /* background-color: #883e3e; /* Use !important to ensure this rule takes precedence ALTERNATIVE*/
-}
-
-main {
-  flex-grow: 1;
-}
-
-.content {
-  flex-grow: 1;
 }
 
 #HomeTitle{
