--- a/static/css/Index.css
+++ b/static/css/Index.css
@@ -5,32 +5,81 @@
   border-color: none;
 }
 
-#MoonBunny{
-  min-height: 50%;
-  min-width: auto;
-  height: 100%;
-  width: 100%;
-}
-
-#video {
+.video-container {
   background-color: rgba(0, 0, 0, 0.5);
-  /* black with 50% opacity */
-  background-image: url("/static/img/Jungleleaves.jpg");
+  background-image: url("/static/img/jungleframe.jpg");
   background-size: cover;
-}
-
-.video-wrapper {
+  background-size: 80%;
+  background-position: center;
+  width: 50vw;
+  height: 40vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 56.25%;
-  /* for 16:9 aspect ratio */
+  z-index: 1;
 }
 
-.video-wrapper iframe {
+.moon-bunny {
+  width: 45vw;
+  height: 30vw;
+  position: relative;
+  z-index: 2;
+}
+
+.containeroverlay {
+  background-image: url("/static/img/jungleframe2.png");
+  background-size: cover;
+  background-size: 80%;
+  background-position: center;
+  width: 100%;
+  height:  100%;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
+  z-index: 4;
+}
+
+/* .leaves {
+  position: absolute;
+  max-height: inherit;
+  max-width: inherit;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none;
+}
+
+#jungleframe {
+  width: 100%;
+  height: 100%;
+} */
+
+#authorvideo{
+    font-family: 'HannieBunny', sans-serif;
+    font-size: 200%;
+    text-align: right;
+}
+
+#authorvideo a {
+  color: black;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+  animation-duration: 2s; 
+  animation-fill-mode: both;
 }
