--- a/templates/Organizations.html
+++ b/templates/Organizations.html
@@ -20,7 +20,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
       <div class="col-3">
         <div id="list-org" class="list-group">
           <a class="list-group-item list-group-item-action" href="#org-item-1">Save the Teporingo</a>
-          <a class="list-group-item list-group-item-action" href="#org-item-2">Bunny Haven Mexico</a>
+          <a class="list-group-item list-group-item-action" href="#org-item-2">Bunny Heaven Mexico</a>
           <a class="list-group-item list-group-item-action" href="#org-item-3">Hoppy Hearts Foundation</a>
           <a class="list-group-item list-group-item-action" href="#org-item-4">Teporingo Conservation Society</a>
           <a class="list-group-item list-group-item-action" href="#org-item-5">Bunny Rescue Mexico</a>
