--- a/templates/index.html
+++ b/templates/index.html
@@ -19,19 +19,26 @@ Home
 </div>
 
 <div class="container" id="BunnyInfo">
-    <div class="image-container">
-        <img id="Teporingopoly" src="{{ url_for('static', filename='img/Teporingopoly.png') }}">
-    </div>
+
+    <!-- <img id="placeholder" src="{{ url_for('static', filename='img/Teporingopoly.png') }}"> -->
+  <!--   <img id="Teporingopoly" src="{{ url_for('static', filename='img/Teporingopoly.png') }}">
+    <img id="grass" src="{{ url_for('static', filename='img/grass.png') }}"> -->
+    <img id="Teporingopoly" src="{{ url_for('static', filename='img/teporingograss.png') }}">
     <p class="TeporingoInfo"><strong>Name: </strong><span class="description">Teporingo, also known as the Volcano
             Rabbit</span></p>
-    <p class="TeporingoInfo"><strong>Size: </strong><span class="description">23 to 31 cm (among the smallest rabbits
+    <p class="TeporingoInfo"><strong>Size: </strong><span class="description">23 to 31 cm (among the smallest
+            rabbits
             in the world!)</span></p>
     <p class="TeporingoInfo"><strong>Weight: </strong><span class="description">380 to 602 grams</span></p>
-    <p class="TeporingoInfo"><strong>Habitat: </strong><span class="description">Endemic to the high-altitude regions of
-        Mexico, particularly around the volcanoes</span></p>
-    <p class="TeporingoInfo"><strong>Conservation Status: </strong><span class="description">Classified as endangered
-        /
-        Mostly Extinct</span></p>
+    <p class="TeporingoInfo"><strong>Habitat: </strong><span class="description">Endemic to the high-altitude
+            regions of
+            Mexico, particularly around the volcanoes</span></p>
+    <p class="TeporingoInfo"><strong>Conservation Status: </strong><span class="description">Classified as
+            endangered
+            /
+            Mostly Extinct</span></p>
+</div>
+
 </div>
 <br>
 </div>
@@ -54,11 +61,8 @@ Home
 
 <div>
     <div class="container" id="BunnyInfo2">
-        <div class="image-container2">
-            <img id="Teporingopoly2" src="{{ url_for('static', filename='img/Teporingopoly.png') }}">
-        </div>
         <p class="TeporingoInfo"><strong>Feeding Habits:</strong><span class="description">Herbivore: grasses and
-            herbs</span></p>>
+                herbs</span></p>>
         <p class="TeporingoInfo"><strong>Unique Adaptations:</strong><span class="description">Dense coat against the
                 cold</span></p>
         <p class="TeporingoInfo"><strong>Curiosity:</strong><span class="description">Helps spreading seeds and weeding
@@ -74,7 +78,6 @@ Home
                 HUMANS</span></p>
     </div>
 </div>
-
 
 <br><br>
 {% endblock %}
