--- a/templates/AboutThem.html
+++ b/templates/AboutThem.html
@@ -25,7 +25,7 @@ About Them
     <!-- First Row -->
     <div class="row">
         <div class="col-6">
-            <a href="#" class="card-link">
+            <a href="{{ url_for('FoodandNutrition') }}" class="card-link">
                 <div class="card">
                     <h4 class="card-title">Food & Nutrition</h4>
                     <div class="card-body">
@@ -38,7 +38,7 @@ About Them
         </div>
 
         <div class="col-6">
-            <a href="#" class="card-link">
+            <a href="{{ url_for('HealthandCare') }}" class="card-link">
                 <div class="card">
                     <h4 class="card-title">Health & Care</h4>
                     <div class="card-body">
@@ -60,7 +60,7 @@ About Them
     <!-- Second Row -->
     <div class="row">
         <div class="col-md-12">
-            <a href="#" class="card-link">
+            <a href="{{ url_for('Breeds') }}" class="card-link">
                 <div class="card">
                     <h4 class="card-title">Breeds</h4>
                     <div class="card-body">
@@ -83,7 +83,7 @@ About Them
     <!-- Third Row -->
     <div class="row">
         <div class="col-md-12">
-            <a href="#" class="card-link">
+            <a href="{{ url_for('ItemsandToys') }}" class="card-link">
                 <div class="card">
                     <h4 class="card-title">Items & Toys</h4>
                     <div class="card-body">
