--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -13,24 +13,88 @@ About Us
 </br>
 <div class="container" id="aboutUsContainter">
   <div class="row AboutUsRow">
+    <div class="col-12 col-md-6 text">
+      <h2 class="AboutUsh2">Why Teporingo?</h2>
+      <p class="AboutUsp">The Teporingo is an endemic and endangered species of Rabbit in Mexico,
+        although there is info about it, sometimes it's wrong or mainly made to profit from it.
+        I wanted to give the teporingo a space where we could raise global awareness about it.
+      </p>
+    </div>
+    <div class="col-12 col-md-6 image">
+      <img src="{{ url_for('static', filename='img/Teporingosleeping.JPG') }}" alt="Terporingo Sleeping"
+        class="img-fluid">
+    </div>
+  </div>
+  
+  <div class="row AboutUsRow">
+    <div class="col-12 col-md-6 text">
+      <h2 class="AboutUsh2">History Behind</h2>
+      <p class="AboutUsp">
+        Teporingo-bunnyadvice.com was forged from the love and care I've experienced over the last ten years,
+        being a bunny owner, there are a lot of info and places where they talk about and cover bunny care,
+        health, and worries but when the idea of a website hit me, I also remembered a little friend I wanted
+        to see and admired much more on my last visit to the Zoo, the Teporingo or the Rabbit of the Volcanos </p>
+    </div>
+    <div class="col-12 col-md-6 image">
+      <img src="{{ url_for('static', filename='img/teporingozoo.jpeg') }}" alt="Terporingo Statue Chapultepec Zoo"
+        class="img-fluid">
+    </div>
+  </div>
+  
+  <div class="row AboutUsRow">
+    <div class="col-12 col-md-6 text">
+      <h2 class="AboutUsh2">Meet Cake & Hades</h2>
+      <p class="AboutUsp">The two main reasons the Teporingo was at the top of my head on my last visit to the Zoo. Cake
+        was a black bunny my sister brought home, she was a rescued and sheltered bunny as she had marks on her ears
+        indicating that she was rescued. She was a fierce bunny, fought against bunny cancer on her breasts and won, but
+        at the long age of 9 years she developed a spinal disease, we took Care of her with love until her last breath,
+        quite literally I sang her the last night she spends with us and pet her in her last breath, but as she was
+        getting older we decided to adopt a little bunny to make up for her disease, that's were Hades came from, the
+        mighty god of the Inframundo, Hades had quite a personality that showed up since he was a little spring, after
+        Cake departure, I and my mom took care of Hades as also my sister departure but from home to another state, now
+        Hades it's a big chunky boy that it's treated like a king in my house, or might I say a god?
+      </p>
+    </div>
+    <div class="col-12 col-md-6 image">
+      <img src="{{ url_for('static', filename='img/CakeandHades.png') }}" alt="CakeandHades"
+        class="img-fluid">
+    </div>
+  </div>
+<!-- 
+  <div class="row AboutUsRow">
     <div class="text">
-      <h2 class="AboutUsh2">Philosophy</h2>
-      <p class="AboutUsp">Insert your philosophy text here.</p>
+      <h2 class="AboutUsh2">Meet Cake & Hades</h2>
+      <p class="AboutUsp">The two main reasons the Teporingo was at the top of my head on my last visit to the Zoo.
+        Cake was a black bunny my sister brought home, she was a rescued and sheltered bunny as she had marks on her ears
+        indicating that she was rescued. She was a fierce bunny, fought against bunny cancer on her breasts and won, but at
+        the long age of 9 years she developed a spinal disease, we took Care of her with love until her last breath, quite
+        literally I sang her the last night she spends with us and pet her in her last breath, but as she was getting older
+        we decided to adopt a little bunny to make up for her disease, that's were Hades came from, the mighty god of the
+        Inframundo,
+        Hades had quite a personality that showed up since he was a little spring, after Cake departure, I and my mom took
+        care of Hades
+        as also my sister departure but from home to another state, now Hades it's a big chunky boy that it's treated like a
+        king in my house,
+        or might I say a god?
+      </p>
     </div>
     <div class="image">
-      <img src="{{ url_for('static', filename='img/Quote1.jpg') }}" alt="Philosophy Image">
+      <img src="{{ url_for('static', filename='img/CakeandHades.png') }}" alt="Cake and Hades" class="img-fluid">
+    </div>
+  </div> -->
+
+  <div class="row AboutUsRow">
+    <div class="col-12 col-md-6 text">
+      <h2 class="AboutUsh2">About Me</h2>
+      <p class="AboutUsp">Hi, my name is Raul Chimal Hernandez, and I'm a 22-year-old Computer Science Student from Mexico.
+        I love animals,
+        programming, video games and sports. And I really hope you enjoy this website!</p>
+    </div>
+    <div class="col-12 col-md-6 image">
+      <img src="{{ url_for('static', filename='img/Hadesme.jpeg') }}" alt="Me?" class="img-fluid">
     </div>
   </div>
 
-  <div class="row AboutUsRow">
-    <div class="text">
-      <h2 class="AboutUsh2">History</h2>
-      <p class="AboutUsp">Insert your history text here.</p>
-    </div>
-    <div class="image">
-      <img src="{{ url_for('static', filename='img/Quote1.jpg') }}" alt="History Image">
-    </div>
-  </div>
 </div>
 
 </br></br>
