--- a/static/css/Index.css
+++ b/static/css/Index.css
@@ -1,10 +1,3 @@
-#MayanTeporingo {
-  width: 25vw;
-  height: auto;
-  border-radius: 20%;
-  border-color: none;
-}
-
 .video-container {
   background-color: rgba(0, 0, 0, 0.5);
   background-image: url("/static/img/jungleframe.jpg");
@@ -88,17 +81,17 @@
 }
 
 #Teporingopoly {
-  height: calc(100px + 20vw);
+  height: calc(150px + 20vw);
   opacity: 0;
   bottom: 0;
   left: 0;
   position: relative;
   animation: popIn 2s forwards;
-  shape-outside: circle(55%);
-  float: left;
+  shape-outside: circle(50%);
+  float: right;
   z-index: 2;
   border-radius: 25%;
-  padding-right: 50px;
+  padding-left: 30px;
 }
 
 #Teporingopoly:hover {
@@ -122,14 +115,14 @@
 }
 
 .Intro {
-  font-size: calc(15px + 2vw) !important;
+  font-size: calc(25px + 3vw) !important;
   font-family: 'Bunny';
   color: black;
   text-align: center;
 }
 
 .TeporingoInfo {
-  font-size: calc(8px + 1vw);
+  font-size: calc(15px + 1.5vw);
   font-family: 'Urbanist';
   color: #000000;
   opacity: 0;
@@ -137,11 +130,11 @@
 }
 
 .TeporingoInfo strong {
-  font-size: calc(12px + 1.5vw);
+  font-size: calc(20px + 3vw);
   font-family: 'Bunny';
   text-align: left;
   position: relative;
-  top: 2px; /* Adjust as needed */
+  top: 4px; /* Adjust as needed */
 }
 
 .description {
@@ -173,4 +166,51 @@
 
 #BunnyInfo{
   position: relative;
+  background-color: rgba(0, 0, 0, 0.077);
+  border-radius: 2%;
+}
+
+.card {
+  background-color: transparent;
+  border: none;
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Added transition properties */
+  --bs-card-border-width: 0 !important;
+  --bs-card-bg: transparent !important;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+.card-link {
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Use the parent's color (usually black) */
+  cursor: pointer; /* Change cursor to pointer on hover for better UX */
+  border: none;
+  background-color: transparent;
+}
+
+.card-link:hover {
+  color: inherit; /* Maintain the same color on hover */
+}
+
+#BunnyInfo2{
+ text-align: center;
+}
+
+#MayanTeporingo {
+  border-radius: 50%;
+  height: calc(100px + 20vw);
+  /*position: relative; */
+  animation: popIn 2s forwards;
+  /* shape-outside: circle(55%);
+  float: left; */
+  padding-right: 50px;
+}
+
+.btn{
+  color: transparent;
+  border: none;
 }
